# jn-engine-contributor-mcp

./: .dockerignore  .env.example  .env.gateway-repo.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.gateway-repo.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  gateway_repo_main.py  main.py  run.py
app/collaboration/: __init__.py  audit.py  errors.py  github.py
app/core/: __init__.py  check_status.py  content_search.py  open_pr.py  path_safety.py  project_context.py  snapshot.py  symbol_index.py  (+2 more)
cloudflared/: config.example.yml
deploy/: __init__.py  export_gateway_snapshot.py  export_snapshot.py  make_access_kit.sh  prune_snapshots.py  refresh_gateway_snapshot.sh  refresh_snapshot.sh
docs/: api_usage.md  deployment.md  future_write_pr.md  gateway_repository_mcp.md  intended_usage.md  mcp_surface.md  onboarding_contributor.md  public_repository_boundary.md  security_model.md
scripts/: __init__.py  check_github_collaborator_token.py  check_public_tree.py  mint_device_token.py  validate_gateway_snapshot.py  validate_snapshot.py
tests/: conftest.py  test_access_kit.py  test_auth_device.py  test_auth_github.py  test_authless_local.py  test_check_status.py  test_config.py  test_container_contract.py  test_content_search.py  test_gateway_repository_mcp.py  test_mcp_tools.py  test_open_pr.py  test_path_safety.py  test_project_context.py  test_public_tree.py  test_rest_surface.py  test_snapshot.py  test_symbol_index.py  test_task_claims.py  test_task_index.py
(+45 files in other folders)
